fix padding right on scrollbar sidebar firefox browser

--- a/src/themes/_common/player/gallery-sidebar.scss
+++ b/src/themes/_common/player/gallery-sidebar.scss
@@ -97,7 +97,7 @@
         }
         /** Firefox only */
         @supports ( -moz-appearance:none ){
-            scrollbar-color: #b3b3b3 #1f1f1f;
+            scrollbar-color: #b3b3b3 #1f1f1f00;
             scrollbar-width: thin;
             padding-right: 5px;
         }
